<resources>
    #musthave
    <string name="appname">LOKOMOTO</string>
    <string name="app_name">LOKOMOTO</string>
    <string name="welcomeMessage">Witaj w LokoMoko!</string>

    #main
    <string name="newAccount">Nowe konto</string>
    <string name="logIn">Zaloguj</string>
    <string name="usunKonto">Usuń konto</string>

    #logowanie
    <string name="logInfo">Podaj swój login i haslo</string>
    <string name="email">Adres email</string>
    <string name="haslo">Hasło</string>

    #rejestracja
    <string name="rejInfo">Podaj swój adres email i hasło</string>
    <string name="rej">Zarejestruj</string>

    #usun_konto
    <string name="usun1">Jesli chcesz usunac konto oraz dane przepisz podany tekst :</string>
    <string name="usunHint">Przepisz zawartosc</string>

    #home
    <string name="before">Pierwsze testy</string>
    <string name="after">Porównaj wynik</string>

    #tests
    <string name="test1">Test nr.1</string>
    <string name="test2">Test nr. 2</string>
    <string name="zapisz_wynik">Zapisz wynik</string>

    #test1
    <string name="title_test1">Test nr.1 - One leg stand</string>
    <string name="tekst_test1_pre"><b>Test nr.1 - One leg stand </b>\n\n
    Polega na staniu w stabilnej pozycji z jedną nogą uniesioną na wyskość 15 cm.\n
    Telefon należy trzymać wertykalnie(pionowo).</string>

    #test2
    <string name="czas">Czas Reakcji</string>
    <string name="startTest1">Rozpocznij test</string>
    <string name="tekst_test2_pre"><b>Test nr.2 - Kule</b>\n\n
    Polega na jak najszybszym zaznaczaniu kul zmieniajacych kolor.\n
    Test konczy się po zaznaczeniu ostatniej kuli.</string>


    #testpo
    <string name="testporownawczy">Wykonaj test po raz drugi by porwównać wyniki</string>
    <string name="porownaj_wyniki">Porównaj wyniki</string>

    #wynik
    <string name="wybierz_skale">Wybierz skale według której chcesz porównać wyniki:</string>
    <string name="porownaj">Porównaj</string>

    #not in use
    <string name="imie">Imię</string>
    <string name="podaj_imie">Podaj swoje imię:</string>
    <string name="usun_profil">Usun profil</string>





</resources>
