<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".Usun">


    <TextView
        android:id="@+id/usunInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="320sp"
        android:text="@string/usun1"
        android:textColor="@color/colorLogo"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usunText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="320sp"
        android:textColor="@color/colorRejestruj"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usunInfo" />

    <EditText
        android:id="@+id/usunInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/usunHint"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorLogo"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usunText" />

    <Button
        android:id="@+id/usuwanie"
        android:layout_width="148dp"
        android:layout_height="67dp"
        android:textSize="20sp"
        android:layout_marginBottom="208dp"
        android:text="@string/usun_profil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usunInput" />

</android.support.constraint.ConstraintLayout>